--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build":"tsc",
-    "start":"node dist/index.js"
-
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "prisma": "^6.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@types/express": "^5.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "zod": "^4.0.10"
   }
